fixed dark mode issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,36 @@
 @import "tailwindcss";
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
-
-
-@font-face {
-    font-family: 'IRANYekanX';
-    src: url('assets/fonts/woff2/IRANYekanXFaNum-Regular.woff2') format('woff2'),
-        url('assets/fonts/woff/IRANYekanXFaNum-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+@theme {
+  --color-gray-50: oklch(0.98 0 0);
+  --color-gray-100: oklch(0.95 0 0);
+  --color-gray-200: oklch(0.9 0 0);
+  --color-gray-300: oklch(0.78 0 0);
+  --color-gray-400: oklch(0.64 0 0);
+  --color-gray-500: oklch(0.5 0 0);
+  --color-gray-600: oklch(0.36 0 0);
+  --color-gray-700: oklch(0.26 0 0);
+  --color-gray-800: oklch(0.16 0 0);
+  --color-gray-900: oklch(0.1 0 0);
+  --color-gray-950: oklch(0.05 0 0);
 }
 
 @font-face {
-    font-family: 'IRANYekanX';
-    src: url('assets/fonts/woff2/IRANYekanXFaNum-Bold.woff2') format('woff2'),
-        url('assets/fonts/woff/IRANYekanXFaNum-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: "IRANYekanX";
+  src: url("assets/fonts/woff2/IRANYekanXFaNum-Regular.woff2") format("woff2"),
+    url("assets/fonts/woff/IRANYekanXFaNum-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "IRANYekanX";
+  src: url("assets/fonts/woff2/IRANYekanXFaNum-Bold.woff2") format("woff2"),
+    url("assets/fonts/woff/IRANYekanXFaNum-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 .no-bg-transition {
@@ -26,12 +38,12 @@
 }
 
 body {
-    font-family: 'IRANYekanX', 'Helvetica Neue', sans-serif;
-    letter-spacing: 0;
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    box-sizing: border-box;
-    margin: 0;
+  font-family: "IRANYekanX", "Helvetica Neue", sans-serif;
+  letter-spacing: 0;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  margin: 0;
 }
